--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,4 +1,13 @@
-<app-page-header></app-page-header>
-<app-links-set-one></app-links-set-one>
-<app-page-body></app-page-body>
-<app-page-footer></app-page-footer>
+
+<router-outlet></router-outlet>
+<body class="mat-app-background">
+    <div class="homeHeader">
+        <app-page-header></app-page-header>
+        <app-links-set-one></app-links-set-one>
+        <app-page-body></app-page-body>
+        <app-page-footer></app-page-footer>
+    </div>
+
+
+    <!-- <app-mate-test></app-mate-test>-->
+</body>
