--- a/src/app/logo/logo.component.html
+++ b/src/app/logo/logo.component.html
@@ -1,2 +1,3 @@
 
-<img src="assets/images/earthRotating_V2.gif" alt="Rotating GIF of Earth. Artwork Author: Benjamin Heath">
+<img class="headerIcon" src="assets/images/earthRotating_V2.gif"
+ alt="Rotating GIF of Earth. Artwork Author: Benjamin Heath" >
