--- a/src/app/page-body/page-body.component.html
+++ b/src/app/page-body/page-body.component.html
@@ -1,25 +1,19 @@
-<div class="indexContent">
-  <div class="transbox"> 
+<div>
 <h2>Welcome to the Home Page</h2>
-
-<p><b>I am developing the website from the ground up, and I will update the site as often as possible!</b></p>
-
-<p><b>Use the Navigation Menu to get around the site. Come back regulary to see upgrades!</b></p><br/>
-</div>
-
+<p><b>Use the Navigation Menu to get around the site. Come back regulary to see upgrades!</b></p>
+<div>Site under construction. Enter if you dare...</div>
 </div>
 <br />
-<div class="transbox">
+<div class="pageList">
 <h3>Computer Services</h3>
-<ul>
- <li>Custom Designed Computers</li>
+<ul >
+ <li class="pageListItems">Custom Designed Computers</li>
  <li>PC Maintainance and Repair</li>
  <li>PC Tune-up</li>
  <li>Malware Cleanse</li>
  <li>Check the out the <a href="../servicePages/residential.html">Residential</a>,
            <a href="../servicePages/business.html">Business</a>,
            <a href="../servicePages/gamers.html">Gaming/Enthusiast</a> pages for more details!</li>
- 
 </ul>
 <h3>Website Services</h3>
 <ul>
