--- a/src/app/page-header/page-header.component.html
+++ b/src/app/page-header/page-header.component.html
@@ -1,18 +1,6 @@
-<div style="align-content:center">
-
-
-  <table class="pageHeading">
-    <tr>
-      
-      <td align="center">
-      <div class="transbox_Heading">
-          <h1>Ben's IT Solutions</h1>
-      </div>
-      </td>
-    <td align="center">  <app-logo></app-logo></td>
-    </tr>
-    </table>
-  
-  
-  
-</div>
+<div class="headerText">
+    <h1>Ben's IT Solutions</h1> 
+  </div>
+  <div class="headerIconWrapper">
+      <app-logo></app-logo>
+  </div>
