--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+/* @import "~@angular/material/prebuilt-themes/pink-bluegrey.css"; */
+
+
+html, body { height: 100%; 
+             background-color: bisque
+}
+body { margin: 0; font-family: 'Roboto', sans-serif; }
