modified:   src/app/app.component.html 	modified:   src/app/home-page/home-page-header/home-page-header.component.css 	modified:   src/app/home-page/home-page-header/home-page-header.component.html 	modified:   src/app/home-page/home-page-menu/home-page-menu.component.css 	modified:   src/app/home-page/home-page-menu/home-page-menu.component.html 	modified:   src/app/home-page/home-page/home-page.component.html

--- a/src/app/home-page/home-page-header/home-page-header.component.html
+++ b/src/app/home-page/home-page-header/home-page-header.component.html
@@ -1,3 +1,8 @@
-<p>
-  home-page-header works!
-</p>
+
+<div style="text-align:center">
+  <p>
+  This is a placeholder for the header component
+  </p>
+</div>
+<div style="float:right"><img src="assets/images/earthRotating_V2.gif"
+  alt="Rotating GIF of Earth. Artwork Author: Benjamin Heath" ></div>
