--- a/src/app/home-page/home-page/home-page.component.html
+++ b/src/app/home-page/home-page/home-page.component.html
@@ -1,11 +1,17 @@
-<p>
-  home-page works!
-</p>
-<div class="navLinks"> 
-  <table>
-    <td><a [routerLink]="['/home']">Home</a></td>
-    <td><a [routerLink]="['/about']">About</a></td>
-    <td><a [routerLink]="['/contact']">Contact Us</a></td>
-  </table>
-</div>
-<router-outlet></router-outlet>
+
+
+<header>
+    <app-home-page-header></app-home-page-header>
+</header>
+<body>
+ <app-home-page-menu></app-home-page-menu>
+  <div style="text-align:center">
+    <p>Left division</p>
+  </div>
+  <div style="text-align:center">
+      <p>Right division</p>
+  </div>
+</body>
+<footer>
+
+</footer>
