Fixed routing issue.
Fixed the incorrect router outlet placement that I did intially. Set of a few more basic styles and began to experiment with bootstap for styling.

--- a/src/app/about-page/about-page/about-page.component.html
+++ b/src/app/about-page/about-page/about-page.component.html
@@ -1,6 +1,21 @@
 
 <router-outlet></router-outlet>
- <div>
-   testing the about page
+<app-about-page-header></app-about-page-header>
+<app-about-page-menu></app-about-page-menu>
+<div class="jumbotron text-center">
+   some text
+  </div>
   
- </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-4">
+        col 3
+      </div>
+      <div class="col-sm-4">
+        col 3
+      </div>
+      <div class="col-sm-4">
+        col 3
+      </div>
+    </div>
+  </div> 
