--- a/src/app/about-page/about-page-menu/about-page-menu.component.html
+++ b/src/app/about-page/about-page-menu/about-page-menu.component.html
@@ -1,3 +1,33 @@
-<p>
-  about-page-menu works!
-</p>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+ 
+ <!-- links section 
+ <div class="aboutPageNav">  
+  <ul>
+     <li><a [routerLink]="['/home']">Home</a></li>
+     <li><a [routerLink]="['/about']">About</a></li>
+     <li><a [routerLink]="['/contact']">Contact Us</a></li>
+ </ul>
+</div>-->
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" [routerLink]="['/home']">Is it done yet?</a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+          <li><a [routerLink]="['/home']">Home</a></li>
+          <li><a [routerLink]="['/about']">About</a></li>
+          <li><a [routerLink]="['/contact']">Contact Us</a></li>
+        </ul>
+       
+      </div>
+    </div>
+</nav> 
+<router-outlet></router-outlet>
