--- a/src/app/contact-page/contact-page-menu/contact-page-menu.component.html
+++ b/src/app/contact-page/contact-page-menu/contact-page-menu.component.html
@@ -1,4 +1,9 @@
-<p>
-  contact-page-menu works!
-</p>
+ <!-- links section -->
+ <div class="nav">  
+  <ul>
+     <li><a [routerLink]="['/home']">Home</a></li>
+     <li><a [routerLink]="['/about']">About</a></li>
+     <li><a [routerLink]="['/contact']">Contact Us</a></li>
+ </ul>
+</div>
 <router-outlet></router-outlet>
