--- a/src/app/contact-page/contact-page/contact-page.component.html
+++ b/src/app/contact-page/contact-page/contact-page.component.html
@@ -1,5 +1,3 @@
 
-<p>
-  contact-page works!
-</p>
+<app-contact-page-header></app-contact-page-header>
 <app-contact-page-menu></app-contact-page-menu>
