--- a/src/app/home-page/home-page-header/home-page-header.component.html
+++ b/src/app/home-page/home-page-header/home-page-header.component.html
@@ -4,5 +4,5 @@
   This is a placeholder for the header component
   </p>
 </div>
-<div style="float:right"><img src="assets/images/earthRotating_V2.gif"
-  alt="Rotating GIF of Earth. Artwork Author: Benjamin Heath" ></div>
+<!-- <div style="float:right"><img src="assets/images/earthRotating_V2.gif" 
+  alt="Rotating GIF of Earth. Artwork Author: Benjamin Heath" ></div>-->
