--- a/src/app/contact-page/contact-page-menu/contact-page-menu.component.html
+++ b/src/app/contact-page/contact-page-menu/contact-page-menu.component.html
@@ -1,4 +1,4 @@
- <!-- links section -->
+ <!-- links section 
  <div class="nav">  
   <ul>
      <li><a [routerLink]="['/home']">Home</a></li>
@@ -6,4 +6,27 @@
      <li><a [routerLink]="['/contact']">Contact Us</a></li>
  </ul>
 </div>
+-->
+
+<div class="nav navbar-fixed-bottom">
+        <div class="container">
+           <div class="row">
+             <div class="col-sm-4">
+               <ul>
+                 <li><a [routerLink]="['/home']">Home</a></li>
+               </ul>
+             </div>
+             <div class="col-sm-4">
+               <ul>
+                 <li><a [routerLink]="['/about']">About</a></li>
+               </ul>
+             </div>
+             <div class="col-sm-4">
+               <ul>
+                 <li><a [routerLink]="['/contact']">Contact Us</a></li>
+               </ul>
+             </div>
+           </div>
+         </div>
+       </div> 
 <router-outlet></router-outlet>
