--- a/src/app/contact-page/contact-page/contact-page.component.html
+++ b/src/app/contact-page/contact-page/contact-page.component.html
@@ -1,3 +1,43 @@
 
 <app-contact-page-header></app-contact-page-header>
+<!-- <div> 
+        <h2>Contact Methods: <br /></h2>
+        <ul>
+            <h3><li>Email: <a href="mailto:bheathit@gmail.com">bheathit@gmail.com</a></li>
+            <li>Text/Call: <a href="sms:941-538-7679">941-538-7679</a></li></h3>
+        </ul>
+        
+        <h2>Who am I?<br /></h2>
+        <div class="card">
+            <img src="assets/images/PicOfSelf_360px.png" alt="Picture of Benjamin Heath" style="width:100%">
+            <div class="container">
+            <h4>Benjamin Heath</h4>
+            <p>Certified IT Technician & Developer</p>
+            </div>
+        </div>
+        <p>You can also find me on Linkedin <a href="https://www.linkedin.com/in/benjamin-heath-738610132/">My Profile Page</a></p>
+    </div>-->
+
+<div class="container" id="cardContainer">
+        <div class="row">
+          <div class="col-sm-4">
+            
+          </div>
+          <div class="col-sm-4">
+                <p>So who is this guy?</p>
+                <div class="card" style="width:400px">
+                  <img class="card-img-top" src="assets/images/PicOfSelf_360px.png" alt="Picture of Benjamin Heath" style="width:100%">
+                  <div class="card-body">
+                    <h4 class="card-title">Benjamin Heath</h4>
+                    <p class="card-text">Certified IT Technician & Developer</p>
+                    <a href="https://www.linkedin.com/in/benjamin-heath-738610132/" class="btn btn-primary">See Profile</a>
+                  </div>
+                </div>
+          </div>
+          <div class="col-sm-4">
+            
+          </div>
+        </div>
+      </div> 
+
 <app-contact-page-menu></app-contact-page-menu>
