--- a/src/app/home-page/home-page-menu/home-page-menu.component.css
+++ b/src/app/home-page/home-page-menu/home-page-menu.component.css
@@ -1,13 +1,27 @@
 .nav {
-    background-color: yellow; 
+    background-color: #E4FAE3; 
     list-style-type: none;
     text-align: center;
     margin: 0;
     padding: 0;
+     border-style: ridge; 
+     border-color: #E4FAE3 
 }
 
 .nav li {
     display: inline-block;
     font-size: 20px;
     padding: 20px;
+}
+.nav li a {
+    display: inline-block;
+    font-size: 20px;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+.nav li a:hover {
+    background-color: rgb(9, 198, 245);
+    color: white;
+    border-radius: 75%
 }
