--- a/src/app/home-page/home-page/home-page.component.html
+++ b/src/app/home-page/home-page/home-page.component.html
@@ -1,13 +1,93 @@
+
 <router-outlet></router-outlet>
+<app-home-page-header></app-home-page-header>
 
-
-    <app-home-page-header></app-home-page-header>
-
-
- <app-home-page-menu></app-home-page-menu>
-  <div style="text-align:center">
-    <p>Left division</p>
-  </div>
-  <div style="text-align:center">
-      <p>Right division</p>
-  </div>
+<div class="HomePageCaro">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+          <li data-target="#myCarousel" data-slide-to="3"></li>
+        </ol>
+      
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <a [routerLink]="['/contact']"><img src="assets/images/earthRotating_V2.gif"
+                alt="Rotating GIF of Earth. Artwork Author: Benjamin Heath" ></a> 
+            <div class="carousel-caption">
+              <h3>Contact Page</h3>
+            </div>
+          </div>
+      
+          <div class="item">
+                <a [routerLink]="['/about']"><img src="assets/images/earthRotating_V2.gif"
+                    alt="Rotating GIF of Earth. Artwork Author: Benjamin Heath" ></a>
+            
+            <div class="carousel-caption">
+              <h3>About Page</h3>
+            </div>
+          </div>
+      
+          <div class="item">
+            <img src="assets/images/earthRotating_V2.gif"
+            alt="Rotating GIF of Earth. Artwork Author: Benjamin Heath" >
+            <div class="carousel-caption">
+              <h3>Will be page Three!</h3>
+            </div>
+          </div>
+      
+          <div class="item">
+            <img src="assets/images/earthRotating_V2.gif"
+            alt="Rotating GIF of Earth. Artwork Author: Benjamin Heath" >
+            <div class="carousel-caption">
+              <h3>Will be page Four!</h3>
+            </div>
+          </div>
+        </div>
+      
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+</div>
+<!-- Begin testing body area -->
+<div class="sectionOne">
+<div>
+        <div>
+        <h3>Computer Services</h3>
+        <ul >
+         <li>Custom Designed Computers</li>
+         <li>PC Maintainance and Repair</li>
+         <li>PC Tune-up</li>
+         <li>Malware Cleanse</li>
+         <li>Check the out the <a href="../servicePages/residential.html">Residential</a>,
+                   <a href="../servicePages/business.html">Business</a>,
+                   <a href="../servicePages/gamers.html">Gaming/Enthusiast</a> pages for more details!</li>
+        </ul>
+        <h3>Website Services</h3>
+        <ul>
+         <li><a href="../servicePages/websiteDesignImp.html">Domain Registration & Set-up Assistance</a></li>
+         <li><a href="../servicePages/websiteDesignImp.html">Design</a></li>
+         <li><a href="../servicePages/websiteDesignImp.html">Markup & Style Coding</a></li>
+         <li><a href="../servicePages/graphics.html">Custom Designed Logo and Site Images</a></li>
+         
+        </ul>
+        <h3>Graphic Design</h3>
+        <ul>
+         <li><a href="../servicePages/graphics.html">Logo Design</a></li>
+         <li><a href="../servicePages/graphics.html">Images</a></li>
+         <li><a href="../servicePages/graphics.html">Projects by request</a></li>
+        </ul>
+        </div>
+    </div>
+    </div>
+    <app-home-page-menu></app-home-page-menu>
