--- a/src/app/about-page/about-page/about-page.component.html
+++ b/src/app/about-page/about-page/about-page.component.html
@@ -1,21 +1,56 @@
 
 <router-outlet></router-outlet>
-<app-about-page-header></app-about-page-header>
+<!-- <app-about-page-header></app-about-page-header> -->
 <app-about-page-menu></app-about-page-menu>
-<div class="jumbotron text-center">
-   some text
+
+
+<div class="jumbotron">
+  <div class="container text-center">
+    <h1>Portfolio</h1>      
+    <h2><p>IT Specialist & Developer</p></h2>
+    <p>Devoted to endless learning and developing systems that enhance all life with technology.</p>
   </div>
+</div>
   
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-4">
-        col 3
-      </div>
-      <div class="col-sm-4">
-        col 3
-      </div>
-      <div class="col-sm-4">
-        col 3
-      </div>
+<div class="container-fluid bg-3 text-center">    
+  <h3>Some of my Work</h3><br>
+  <div class="row">
+    <div class="col-sm-4">
+      <h4><p class="text-center">terraitsolutions Repo</p></h4>
+      <a href="https://github.com/bheathit/terraitsolutions"><img src="assets/images/GitHub_Logo.png" class="img-responsive" style="width:100%" alt="Image"></a>
     </div>
-  </div> 
+    <div class="col-sm-4"> 
+      <h4><p class="text-center">Site-v3 Repo</p></h4>
+      <a href="https://github.com/bheathit/site-v3"><img src="assets/images/GitHub_Logo.png" class="img-responsive" style="width:100%" alt="Image"></a>
+    </div>
+    <div class="col-sm-4"> 
+      <h4><p class="text-center">Warp-ship Repo</p></h4>
+      <a href="https://github.com/bheathit/terraitsolutions"><img src="assets/images/GitHub_Logo.png" class="img-responsive" style="width:100%" alt="Image"></a>
+    </div>
+  </div>
+</div><br>
+
+<div class="container-fluid bg-3 text-center">    
+  <div class="row">
+    <div class="col-sm-3">
+      <p>Some text..</p>
+      <img src="assets/images/TestImage_150x80.JPG" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-3"> 
+      <p>Some text..</p>
+      <img src="assets/images/TestImage_150x80.JPG" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-3"> 
+      <p>Some text..</p>
+      <img src="assets/images/TestImage_150x80.JPG" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-3">
+      <p>Some text..</p>
+      <img src="assets/images/TestImage_150x80.JPG" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+  </div>
+</div><br><br>
+
+<footer class="container-fluid text-center">
+  <p>Footer Text</p>
+</footer>
