--- a/src/app/contact-page/contact-page/contact-page.component.html
+++ b/src/app/contact-page/contact-page/contact-page.component.html
@@ -1,23 +1,5 @@
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <app-contact-page-header></app-contact-page-header>
-<!-- <div> 
-        <h2>Contact Methods: <br /></h2>
-        <ul>
-            <h3><li>Email: <a href="mailto:bheathit@gmail.com">bheathit@gmail.com</a></li>
-            <li>Text/Call: <a href="sms:941-538-7679">941-538-7679</a></li></h3>
-        </ul>
-        
-        <h2>Who am I?<br /></h2>
-        <div class="card">
-            <img src="assets/images/PicOfSelf_360px.png" alt="Picture of Benjamin Heath" style="width:100%">
-            <div class="container">
-            <h4>Benjamin Heath</h4>
-            <p>Certified IT Technician & Developer</p>
-            </div>
-        </div>
-        <p>You can also find me on Linkedin <a href="https://www.linkedin.com/in/benjamin-heath-738610132/">My Profile Page</a></p>
-    </div>-->
-
 <div class="container" id="cardContainer">
         <div class="row">
           <div class="col-sm-4">
