--- a/src/app/home-page/home-page/home-page.component.html
+++ b/src/app/home-page/home-page/home-page.component.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 <router-outlet></router-outlet>
 <app-home-page-header></app-home-page-header>
